--- a/public/about.html
+++ b/public/about.html
@@ -508,7 +508,7 @@
       <section class="section section-advantages bg-blue-light">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 col-md-12">
+            <div class="col-md-4 col-m-12">
               <div class="advantages-card">
                 <div class="advantages-card-head">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="advantages-card-icon">
@@ -535,7 +535,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-12">
+            <div class="col-md-4 col-m-12">
               <div class="advantages-card">
                 <div class="advantages-card-head">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="advantages-card-icon">
@@ -564,7 +564,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-12">
+            <div class="col-md-4 col-m-12">
               <div class="advantages-card">
                 <div class="advantages-card-head">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="advantages-card-icon">
